--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -75,6 +75,11 @@ jobs:
       
       - name: GO - Install dependencies
         run: |
+          cd src_go/details/notification
+          go get .
+          go mod tidy
+          cd ../../../
+
           cd src_go/download/check_status
           go get .
           go mod tidy
@@ -135,7 +140,8 @@ jobs:
           go test ./src_go/details/api/... -v
           go test ./src_go/details/queue/... -v
           go test ./src_go/details/batcher/... -v
-          
+          go test ./src_go/details/notification/... -v
+
           go test ./src_go/download/check_status/... -v
           go test ./src_go/download/initiate/... -v
           go test ./src_go/download/process/... -v
