--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ target
 hole/
 .infrastructure/slower_api.yaml
 
+src_go/details/notification/notification
+src_go/details/notification/notification.zip
+src_go/details/notification/bootstrap
+
 src_go/search/check_status/check_status
 src_go/search/check_status/check_status.zip
 src_go/search/check_status/bootstrap
