--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -23,11 +23,6 @@ jobs:
           yum install wget -y > /dev/null
           yum install which -y > /dev/null
           yum groupinstall "Development Tools" -y > /dev/null
-      
-      - name: Check GLIGC version
-        shell: bash
-        run: |
-          ldd --version
 
       - name: Install Python 3
         shell: bash
@@ -97,102 +92,55 @@ jobs:
       #     draft: false
       #     prerelease: false
 
-      - name: SCALA - Check Fomatting
-        shell: bash
-        run: |
-          sbt -v "core/scalafmtCheckAll;"
-
-      - name: SCALA - Unit Tests
-        shell: bash
-        run: |
-          sbt -v "core/test;"
-      
       - name: SCALA - Packaging Code
         shell: bash
         run: |
-          sbt -v "core/GraalVMSharedLib/packageBin;"
-          cp -r ./src_core/target/graalvm-shared-lib/* ./src_go/search/initiate/validation/
-          cp -r ./src_core/target/graalvm-shared-lib/* ./src_go/search/process/searcher/
+          sbt -v "assembly;"
 
-      - name: GO - Install dependencies
-        run: |
-          cd src_go/details/notification
-          go get .
-          go mod tidy
-          cd ../../../
-
-          cd src_go/download/check_status
-          go get .
-          go mod tidy
-          cd ../../../
-
-          cd src_go/download/initiate
-          go get .
-          go mod tidy
-          cd ../../../
-
-          cd src_go/download/process
-          go get .
-          go mod tidy
-          cd ../../../
-
-          cd src_go/search/check_status
-          go get .
-          go mod tidy
-          cd ../../../   
-
-          cd src_go/search/initiate
-          go get .
-          go mod tidy
-          cd ../../../   
-
-          cd src_go/search/process
-          go get .
-          go mod tidy
-          cd ../../../   
-          
-      - name: GO - Build
+      - name: GO - Packaging Code
         shell: bash
         run: |
           cd ./src_go/details/notification
+          go get .
           GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -v -o bootstrap -tags lambda.norpc .
           zip notification.zip bootstrap
           cd ../../../
 
           cd ./src_go/download/check_status
+          go get .
           GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -v -o bootstrap -tags lambda.norpc .
           zip check_status.zip bootstrap
           cd ../../../
 
           cd ./src_go/download/initiate
+          go get .
           GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -v -o bootstrap -tags lambda.norpc .
           zip initiate.zip bootstrap
           cd ../../../
 
           cd ./src_go/download/process
+          go get .
           GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -v -o bootstrap -tags lambda.norpc .
           zip process.zip bootstrap
           cd ../../../
 
           cd ./src_go/search/check_status
+          go get .
           GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -v -o bootstrap -tags lambda.norpc .
           zip check_status.zip bootstrap
           cd ../../../
 
           cd ./src_go/search/initiate
-          GOOS=linux GOARCH=amd64 CGO_ENABLED=1 go build -v -o bootstrap -tags lambda.norpc .
-          zip initiate.zip bootstrap validation/chess-finder-core_dynamic.h validation/chess-finder-core.h validation/graal_isolate_dynamic.h validation/graal_isolate.h validation/chess-finder-core.so
+          go get .
+          GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -v -o bootstrap -tags lambda.norpc .
+          zip initiate.zip bootstrap
           cd ../../../
 
           cd ./src_go/search/process
-          GOOS=linux GOARCH=amd64 CGO_ENABLED=1 go build -v -o bootstrap -tags lambda.norpc .
-          zip process.zip bootstrap searcher/chess-finder-core_dynamic.h searcher/chess-finder-core.h searcher/graal_isolate_dynamic.h searcher/graal_isolate.h searcher/chess-finder-core.so
+          go get .
+          GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -v -o bootstrap -tags lambda.norpc .
+          zip process.zip bootstrap
           cd ../../../
-
-      - name: Build Scala
-        shell: bash
-        run: |
-          sbt -v "assembly;"
       
       - name: Make Python 3 default
         shell: bash
