--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -9,11 +9,6 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:    
-      - name: Check GLIGC version
-        shell: bash
-        run: |
-          ldd --version
-
       - name: Install SDKMAN
         shell: bash
         run: curl -s "https://get.sdkman.io" | bash > /dev/null
@@ -66,48 +61,34 @@ jobs:
         run: |
           sbt -v "core/test;test;"
       
-      - name: SCALA - Packaging Code
-        shell: bash
-        run: |
-          sbt -v "core/GraalVMSharedLib/packageBin;"
-          cp -r ./src_core/target/graalvm-shared-lib/* ./src_go/search/initiate/validation/
-          cp -r ./src_core/target/graalvm-shared-lib/* ./src_go/search/process/searcher/
-      
       - name: GO - Install dependencies
         run: |
           cd src_go/details/notification
           go get .
-          go mod tidy
           cd ../../../
 
           cd src_go/download/check_status
           go get .
-          go mod tidy
           cd ../../../
 
           cd src_go/download/initiate
           go get .
-          go mod tidy
           cd ../../../
 
           cd src_go/download/process
           go get .
-          go mod tidy
           cd ../../../
 
           cd src_go/search/check_status
           go get .
-          go mod tidy
           cd ../../../   
 
           cd src_go/search/initiate
           go get .
-          go mod tidy
           cd ../../../     
 
           cd src_go/search/process
           go get .
-          go mod tidy
           cd ../../../
                 
       - name: Install AWS CLI
@@ -130,27 +111,23 @@ jobs:
       - name: GO - Test
         shell: bash
         run: |
-          docker compose -f ./src/it/resources/docker-compose.yaml --env-file ./src/it/resources/.env up -d
+          docker compose -f .dev/docker-compose.yaml --env-file .dev/.env up -d
           sleep 10s          
           awslocal  s3api create-bucket --bucket chessfinder
           # samlocal deploy --template-file template_resources.yaml --stack-name chessfinder --capabilities CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND --s3-bucket chessfinder
           samlocal deploy --template-file .infrastructure/db.yaml --stack-name chessfinder_dynamodb --capabilities CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND --s3-bucket chessfinder --parameter-overrides TheStackName=chessfinder_dynamodb
           samlocal deploy --template-file .infrastructure/queue.yaml --stack-name chessfinder_sqs --capabilities CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND --s3-bucket chessfinder --parameter-overrides TheStackName=chessfinder_sqs
+          
           go test ./src_go/details/db/... -v
           go test ./src_go/details/api/... -v
           go test ./src_go/details/queue/... -v
           go test ./src_go/details/batcher/... -v
           go test ./src_go/details/notification/... -v
-
           go test ./src_go/download/check_status/... -v
           go test ./src_go/download/initiate/... -v
           go test ./src_go/download/process/... -v
           go test ./src_go/search/check_status/... -v
-          cd src_go/search/initiate
-          go test ./... -v
-          cd ../../../
+          go test ./src_go/search/initiate/... -v
+          go test ./src_go/search/process/... -v
 
-          cd src_go/search/process
-          go test ./... -v
-          cd ../../../
-          docker compose -f ./src/it/resources/docker-compose.yaml down
+          docker compose -f .dev/docker-compose.yaml down
