--- a/.infrastructure/alarm.yaml
+++ b/.infrastructure/alarm.yaml
@@ -66,18 +66,44 @@ Resources:
       AlarmDescription: 'Profile not found in chess.com'
       AlarmName: ProfileNotFound
       ComparisonOperator: 'GreaterThanThreshold'
-      DatapointsToAlarm: 2
+      DatapointsToAlarm: 1
       Dimensions: 
         - Name: Action
           Value: GetProfile
         - Name: StatusCode
           Value: 404
-      EvaluationPeriods: 3
+      EvaluationPeriods: 1
       MetricName: ChessDotComMeter
       Namespace: !Ref TheStackName
       OKActions: 
         - !Ref AlarmTopic
-      Period: 300
+      Period: 60
+      Statistic: Sum
+      Threshold: 1
+      TreatMissingData: 'notBreaching'
+      Unit: Count
+
+  ProfileNotFound:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      ActionsEnabled: true
+      AlarmActions: 
+        - !Ref AlarmTopic
+      AlarmDescription: 'Profile not found in chess.com'
+      AlarmName: ProfileNotFound
+      ComparisonOperator: 'GreaterThanThreshold'
+      DatapointsToAlarm: 1
+      Dimensions: 
+        - Name: Action
+          Value: GetProfile
+        - Name: StatusCode
+          Value: 404
+      EvaluationPeriods: 1
+      MetricName: ChessDotComMeter
+      Namespace: !Ref TheStackName
+      OKActions: 
+        - !Ref AlarmTopic
+      Period: 60
       Statistic: Sum
       Threshold: 1
       TreatMissingData: 'notBreaching'
@@ -146,10 +172,8 @@ Resources:
           TELEGRAM_URL: "https://api.telegram.org"
           TELEGRAM_BOT_API_KEY: !Sub '{{resolve:ssm:${TelegramBotApiKey}}}'
           TELEGRAM_CHAT_ID: !Sub '{{resolve:ssm:${TelegramChatId}}}'
-          TELEGRAM_INSIGHTS_TOPIC_ID: !Sub '{{resolve:ssm:${TelegramInsightsTopicId}}}'
-          TELEGRAM_INSIGHTS_ALARMS: !Join [";", [!Ref ProfileNotFound]]
-          TELEGRAM_HEALTH_TOPIC_ID: !Sub '{{resolve:ssm:${TelegramHealthTopicId}}}'
-          TELEGRAM_HEALTH_ALARMS: "nothing"
+          TELEGRAM_REPORT_TOPIC_ID: !Sub '{{resolve:ssm:${TelegramInsightsTopicId}}}'
+          TELEGRAM_ALARM_TOPIC_ID: !Sub '{{resolve:ssm:${TelegramHealthTopicId}}}'
       Role: !Ref ChessfinderLambdaRoleArn
       LoggingConfig:
         LogFormat: JSON
