feat: return existing download id

--- a/.infrastructure/db.yaml
+++ b/.infrastructure/db.yaml
@@ -23,9 +23,8 @@ Resources:
           KeyType: HASH
         - AttributeName: platform
           KeyType: RANGE
-      ProvisionedThroughput:
-        ReadCapacityUnits: 2
-        WriteCapacityUnits: 2
+      BillingMode: PAY_PER_REQUEST
+
   DownloadsTable:
     Type: AWS::DynamoDB::Table
     Properties:
@@ -33,13 +32,27 @@ Resources:
       AttributeDefinitions:
         - AttributeName: download_id
           AttributeType: S
+        - AttributeName: consistent_download_id
+          AttributeType: S
+        - AttributeName: expires_at
+          AttributeType: N
       KeySchema:
         - AttributeName: download_id
           KeyType: HASH
+      GlobalSecondaryIndexes:
+        - IndexName: !Sub "${TheStackName}-downloadsByConsistentDownloadId"
+          KeySchema:
+            - AttributeName: consistent_download_id
+              KeyType: HASH
+            - AttributeName: expires_at
+              KeyType: RANGE
+          Projection:
+            ProjectionType: ALL
       BillingMode: PAY_PER_REQUEST
       TimeToLiveSpecification:
         AttributeName: expires_at
         Enabled: true
+
   GamesTable:
     Type: AWS::DynamoDB::Table
     Properties:
@@ -92,9 +105,22 @@ Resources:
       AttributeDefinitions:
         - AttributeName: search_id
           AttributeType: S
+        - AttributeName: consistent_search_id
+          AttributeType: S
+        - AttributeName: expires_at
+          AttributeType: N
       KeySchema:
         - AttributeName: search_id
           KeyType: HASH
+      GlobalSecondaryIndexes:
+        - IndexName: !Sub "${TheStackName}-searchesByConsistentSearchId"
+          KeySchema:
+            - AttributeName: consistent_search_id
+              KeyType: HASH
+            - AttributeName: expires_at
+              KeyType: RANGE
+          Projection:
+            ProjectionType: ALL
       BillingMode: PAY_PER_REQUEST
       TimeToLiveSpecification:
         AttributeName: expires_at
@@ -107,6 +133,11 @@ Outputs:
   DownloadsTableName:
     Description: "Downloads Table Name"
     Value: !Ref DownloadsTable
+  DownloadsByConsistentDownloadIdIndexName:
+    Description: "Downloads By Consistent Download Id Index Name"
+     # this is a shame that we have to hardcode this
+    # Value: "!GetAtt ???.0.IndexName"
+    Value: !Sub "${TheStackName}-downloadsByConsistentDownloadId"
   GamesTableName:
     Description: "Games Table Name"
     Value: !Ref GamesTable
@@ -121,3 +152,8 @@ Outputs:
   SearchesTableName:
     Description: "Searches Table Name"
     Value: !Ref SearchesTable
+  SearchesByConsistentSearchIdIndexName:
+    Description: "Searches By Consistent Search Id Index Name"
+     # this is a shame that we have to hardcode this
+    # Value: "!GetAtt ???.0.IndexName"
+    Value: !Sub "${TheStackName}-searchesByConsistentSearchId"
