--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
     name: Compile, Build and Deploy QA
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     container: amazonlinux:2
 
