--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -9,40 +9,44 @@ jobs:
     name: Compile, Build and Deploy QA
     runs-on: ubuntu-latest
 
-    container: amazonlinux:2
+    # no need if we don't use amazon linux 2
+    # container: amazonlinux:2
 
     steps:     
-      - name: Setup Amazon Linux
-        shell: bash
-        run: |
-          yum update -y > /dev/null
-          yum upgrade -y > /dev/null
-          yum install zip -y > /dev/null
-          yum install unzip -y > /dev/null
-          yum install tar -y > /dev/null
-          yum install gzip -y > /dev/null
-          yum install wget -y > /dev/null
-          yum install which -y > /dev/null
-          yum groupinstall "Development Tools" -y > /dev/null
+      # no need if we don't use amazon linux 2
+      # - name: Setup Amazon Linux
+      #   shell: bash
+      #   run: |
+      #     yum update -y > /dev/null
+      #     yum upgrade -y > /dev/null
+      #     yum install zip -y > /dev/null
+      #     yum install unzip -y > /dev/null
+      #     yum install tar -y > /dev/null
+      #     yum install gzip -y > /dev/null
+      #     yum install wget -y > /dev/null
+      #     yum install which -y > /dev/null
+      #     yum groupinstall "Development Tools" -y > /dev/null
 
-      - name: Install Python 3
-        shell: bash
-        run: |
-          yum install python3 -y > /dev/null
-          alternatives --install /usr/bin/python python /usr/bin/python2.7 1
-          alternatives --install /usr/bin/python python /usr/bin/python3 2
-          echo 1 | alternatives --config python
-          ln -sf /usr/bin/pip3 /usr/bin/pip
+      # no need if we don't use amazon linux 2
+      # - name: Install Python 3
+      #   shell: bash
+      #   run: |
+      #     yum install python3 -y > /dev/null
+      #     alternatives --install /usr/bin/python python /usr/bin/python2.7 1
+      #     alternatives --install /usr/bin/python python /usr/bin/python3 2
+      #     echo 1 | alternatives --config python
+      #     ln -sf /usr/bin/pip3 /usr/bin/pip
 
       - name: Install SDKMAN
         shell: bash
         run: curl -s "https://get.sdkman.io" | bash > /dev/null
 
-      - name: Install GIT
-        shell: bash
-        run: |
-          yum install git -y > /dev/null
-          git config --global --add safe.directory '*'
+      # no need if we don't use amazon linux 2
+      # - name: Install GIT
+      #   shell: bash
+      #   run: |
+      #     yum install git -y > /dev/null
+      #     git config --global --add safe.directory '*'
 
       - name: Install GraalVM JDK
         shell: bash
