--- a/.infrastructure/notifier.yaml
+++ b/.infrastructure/notifier.yaml
@@ -11,6 +11,9 @@ Parameters:
   NotificationQueueArn:
     Type: String
     Description: The ARN of the queue that receives the notifications
+  NotificationTopicArn:
+    Type: String
+    Description: The ARN of the topic that sends the notifications
 
 Resources:
   ProfileNotFound:
@@ -18,7 +21,7 @@ Resources:
     Properties:
       ActionsEnabled: true
       AlarmActions: 
-        - !Ref NotificationTopic
+        - !Ref NotificationTopicArn
       AlarmDescription: 'Profile not found in chess.com'
       AlarmName: !Sub "${TheStackName}-ProfileNotFound"
       ComparisonOperator: 'GreaterThanThreshold'
@@ -32,7 +35,7 @@ Resources:
       MetricName: ChessDotComMeter
       Namespace: !Ref TheStackName
       OKActions: 
-        - !Ref NotificationTopic
+        - !Ref NotificationTopicArn
       Period: 60
       Statistic: Sum
       Threshold: 1
@@ -44,7 +47,7 @@ Resources:
     Properties:
       ActionsEnabled: true
       AlarmActions: 
-        - !Ref NotificationTopic
+        - !Ref NotificationTopicArn
       AlarmDescription: 'Profile checked in chess.com'
       AlarmName: !Sub "${TheStackName}-ProfileIsSearched"
       ComparisonOperator: 'GreaterThanThreshold'
@@ -56,7 +59,7 @@ Resources:
       MetricName: ChessDotComMeter
       Namespace: !Ref TheStackName
       OKActions: 
-        - !Ref NotificationTopic
+        - !Ref NotificationTopicArn
       Period: 60
       Statistic: Sum
       Threshold: 1
@@ -112,7 +115,7 @@ Resources:
       Events:
         NotificationCommand:
           Properties:
-            Queue: !GetAtt NotificationQueueArn
+            Queue: !Ref NotificationQueueArn
             BatchSize: 10
           Type: SQS
       Timeout: 60
@@ -138,5 +141,3 @@ Resources:
       - TelegramChatId
       - TelegramInsightsTopicId
       - TelegramHealthTopicId
-
-  
