feat: metrics for downloads and searches

--- a/.dev/docker-compose_local.yaml
+++ b/.dev/docker-compose_local.yaml
@@ -15,7 +15,7 @@ services:
         "1000",
         "--local-response-templating",
         "--root-dir",
-        "/home/wiremock/storage"
+        "/home/wiremock"
       ]
   # dynamodb:
   #   image: amazon/dynamodb-local:latest
